--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -22,3 +22,10 @@ jobs:
         with:
           name: live-matches-playlist
           path: live_matches_playlist.m3u
+      - name: Checkout repository
+        uses: actions/checkout@v4
+      - run: |
+          git config repo-token: ${{ secrets.GITHUB_TOKEN }}
+          git add .
+          git commit -m "generated"
+          git push
