--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -20,7 +20,8 @@ jobs:
         run: bun install
       - name: Run script
         run: bun run index.ts
-      - name: Commit & Push changes
-        uses: actions-js/push@master
+      - name: Archive production artifacts
+        uses: actions/upload-artifact@v3
         with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
+          name: stream-playlist
+          path: stream/playlist.m3u
