--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -25,3 +25,10 @@ jobs:
         with:
           name: stream-playlist
           path: stream/playlist.m3u
+      - uses: actions/checkout@v4
+      - run: |
+          git config user.name github-actions
+          git config user.email github-actions@github.com
+          git add .
+          git commit -m "Update playlist"
+          git push
