--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -11,16 +11,15 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
-        with:
-          persist-credentials: false # otherwise, the token used is the GITHUB_TOKEN, instead of your personal token
-          fetch-depth: 0 # otherwise, you will failed to push refs to dest repo
       - name: Setup Bun
         uses: oven-sh/setup-bun@v1
       - name: Install dependencies
         run: bun install
       - name: Run script
         run: bun run index.ts
-      - name: Commit & Push changes
-        uses: actions-js/push@master
-        with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
+      - run: |
+          git config user.name github-actions
+          git config user.email github-actions@github.com
+          git add .
+          git commit -m "generated"
+          git push
