--- a/.github/workflows/update-playlist.yml
+++ b/.github/workflows/update-playlist.yml
@@ -32,5 +32,6 @@ jobs:
           git config user.name update-playlist-bot
           git config user.email update-playlist-bot@users.noreply.github.com
           git add .
-          git diff --exit-code || git commit -m "Update Playlist (GitHub Actions)"
-          git diff --exit-code || git push -f origin main
+          git diff --exit-code && { echo 'No changes detected'; exit 0; }
+          git commit -m "Update Playlist (GitHub Actions)"
+          git push origin main
