--- a/.github/workflows/update-playlist.yml
+++ b/.github/workflows/update-playlist.yml
@@ -32,6 +32,6 @@ jobs:
           git config user.name update-playlist-bot
           git config user.email update-playlist-bot@users.noreply.github.com
           git add .
-          git diff --exit-code && { echo 'No changes detected'; exit 0; }
+          git diff --exit-code || { echo 'No changes detected'; exit 0; }
           git commit -m "Update Playlist (GitHub Actions)"
           git push origin main
