--- a/.github/workflows/update-playlist.yml
+++ b/.github/workflows/update-playlist.yml
@@ -32,6 +32,8 @@ jobs:
           git config user.name update-playlist-bot
           git config user.email update-playlist-bot@users.noreply.github.com
           git add .
-          git diff --exit-code || { echo 'No changes detected'; exit 0; }
-          git commit -m "Update Playlist (GitHub Actions)"
-          git push origin main
+          # git diff --exit-code || { echo 'No changes detected'; exit 0; }
+          if ! git diff-index --quiet HEAD --; then 
+            git commit -m "Update Playlist (GitHub Actions)"
+            git push origin main
+          fi
