--- a/.github/workflows/update-playlist.yml
+++ b/.github/workflows/update-playlist.yml
@@ -2,7 +2,7 @@ name: Update Playlist
 
 on:
   schedule:
-    - cron: '*/10 * * * *'
+    - cron: "*/10 * * * *"
   push:
     branches:
       - main
@@ -16,16 +16,14 @@ jobs:
 
       - name: Setup bun
         uses: oven-sh/setup-bun@v1
-        with:
-          bun-version: latest
 
       - name: Install dependencies
         run: bun install
 
       - name: Run script
-        run: bun run index.ts
+        run: bun index.ts
 
-      - name: Deploy
+      - name: Deploy gist
         uses: exuanbo/actions-deploy-gist@v1
         with:
           token: ${{ secrets.TOKEN }}
@@ -39,7 +37,7 @@ jobs:
       #     git config user.email update-playlist-bot@users.noreply.github.com
       #     git add .
       #     # git diff --exit-code || { echo 'No changes detected'; exit 0; }
-      #     if ! git diff-index --quiet HEAD --; then 
+      #     if ! git diff-index --quiet HEAD --; then
       #       git commit -m "Update Playlist (GitHub Actions)"
       #       git push origin main
       #     fi
