--- a/.github/workflows/update-playlist.yml
+++ b/.github/workflows/update-playlist.yml
@@ -31,13 +31,12 @@ jobs:
           file_path: stream/playlist.m3u
           file_type: binary
 
-      # - name: Push a commit
-      #   run: |
-      #     git config user.name update-playlist-bot
-      #     git config user.email update-playlist-bot@users.noreply.github.com
-      #     git add .
-      #     # git diff --exit-code || { echo 'No changes detected'; exit 0; }
-      #     if ! git diff-index --quiet HEAD --; then
-      #       git commit -m "Update Playlist (GitHub Actions)"
-      #       git push origin main
-      #     fi
+      - name: Push a commit
+        run: |
+          git config user.name update-playlist-bot
+          git config user.email update-playlist-bot@users.noreply.github.com
+          git add .
+          if ! git diff-index --quiet HEAD --; then
+            git commit -m "Update Playlist (GitHub Actions)"
+            git push origin main
+          fi
