--- a/package.json
+++ b/package.json
@@ -2,8 +2,12 @@
   "name": "xltv",
   "module": "index.ts",
   "type": "module",
+  "scripts": {
+    "format": "prettier . --write"
+  },
   "devDependencies": {
-    "bun-types": "latest"
+    "bun-types": "latest",
+    "prettier": "^3.1.0"
   },
   "peerDependencies": {
     "typescript": "^5.0.0"
